--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   rel="stylesheet"
   href="https://unpkg.com/mockman-js@latest/dist/style.css"
 />
-    <title>React App</title>
+    <title>MiSto- Ecommerce </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
